tests/rosetta/out/Java/call-an-object-method-2.error
javac error: exit status 1
/tmp/TestMochiToJavacall-an-object-method-23429354490/001/CallAnObjectMethod2.java:22: error: cannot find symbol
    static List<Object> New = funcs.get(0);
                              ^
  symbol:   variable funcs
  location: class CallAnObjectMethod2
/tmp/TestMochiToJavacall-an-object-method-23429354490/001/CallAnObjectMethod2.java:23: error: cannot find symbol
    static List<Object> Count = funcs.get(1);
                                ^
  symbol:   variable funcs
  location: class CallAnObjectMethod2
/tmp/TestMochiToJavacall-an-object-method-23429354490/001/CallAnObjectMethod2.java:26: error: incompatible types: Object is not a functional interface
        Object New = () -> {
                     ^
/tmp/TestMochiToJavacall-an-object-method-23429354490/001/CallAnObjectMethod2.java:28: error: constructor Box in class Box cannot be applied to given types;
            Box b = new Box(sn);
                    ^
  required: String,int
  found:    int
  reason: actual and formal argument lists differ in length
/tmp/TestMochiToJavacall-an-object-method-23429354490/001/CallAnObjectMethod2.java:34: error: incompatible types: Object is not a functional interface
        Object Count = () -> {
                       ^
5 errors
