tests/rosetta/out/Java/call-an-object-method-2.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:11:07Z
// call-an-object-method-2.mochi
import java.util.*;

class Box {
    String Contents;
    int secret;
    Box(String Contents, int secret) {
        this.Contents = Contents;
        this.secret = secret;
    }
    @Override public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof Box other)) return false;
        return Objects.equals(this.Contents, other.Contents) && Objects.equals(this.secret, other.secret);
    }
    @Override public int hashCode() {
        return Objects.hash(Contents, secret);
    }
}
public class CallAnObjectMethod2 {
    static List<Object> New = funcs.get(0);
    static List<Object> Count = funcs.get(1);
    static List<Object> newFactory() {
        int sn = 0;
        Object New = () -> {
            sn = (int)(sn + 1);
            Box b = new Box(sn);
            if (sn == 1) {
                b.Contents = "rabbit";
            }
            return b;
        };
        Object Count = () -> {
            return sn;
        };
        return Arrays.asList(New, Count);
    }
    public static void main(String[] args) {
    List<Object> funcs = newFactory();
    }
}
